--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -10,7 +10,7 @@
 <style>
 body{margin:0;font-family:system-ui;background:#020617;color:#e5e7eb;padding:16px}
 header{display:flex;justify-content:space-between;align-items:center;padding:14px 0;border-bottom:1px solid #1e293b;margin-bottom:14px}
-button{border:none;padding:10px 14px;border-radius:10px;font-weight:800;cursor:pointer;background:#38bdf8;color:#020617}
+button{border:none;padding:10px 14px;border-radius:10px;font-weight:900;cursor:pointer;background:#38bdf8;color:#020617}
 .box{border:1px solid #1e293b;border-radius:12px;padding:14px;background:#020617;margin-bottom:14px}
 .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:10px}
 .card{border:1px solid #1e293b;border-radius:12px;padding:10px}
@@ -19,8 +19,9 @@ h2{margin:0;font-size:18px}
 .ok{color:#22c55e}
 .err{color:#f87171}
 input,select{width:100%;padding:12px;margin-bottom:10px;border-radius:10px;border:1px solid #1e293b;background:#020617;color:#e5e7eb}
-a{color:#38bdf8;text-decoration:none;font-weight:900}
+a{color:#38bdf8;text-decoration:none;font-weight:1000}
 a:hover{text-decoration:underline}
+hr{border:none;border-top:1px solid #1e293b;margin:14px 0}
 </style>
 </head>
 
@@ -38,7 +39,7 @@ a:hover{text-decoration:underline}
 
 <div class="box">
   <h2>Balance</h2>
-  <div id="balance" style="font-size:26px;font-weight:900;margin-top:8px;">--</div>
+  <div id="balance" style="font-size:26px;font-weight:1000;margin-top:8px;">--</div>
   <div class="small">Your trading account balance</div>
 </div>
 
@@ -67,7 +68,7 @@ a:hover{text-decoration:underline}
 
   <div class="card">
     <div class="small">Deposit Address</div>
-    <div id="depAddress" style="margin-top:8px;font-weight:900;">--</div>
+    <div id="depAddress" style="margin-top:8px;font-weight:1000;">--</div>
     <button style="margin-top:10px;width:100%" onclick="copyAddress()">Copy Address</button>
   </div>
 </div>
@@ -101,6 +102,8 @@ a:hover{text-decoration:underline}
 
   <a href="portfolio.html">📊 Portfolio</a><br><br>
 
+  <a href="plans.html">💼 Investment Plans</a><br><br>
+
   <a href="deposits.html">📌 Deposits History</a><br><br>
 
   <a href="withdraw.html">➡ Withdraw Funds</a><br><br>
@@ -113,7 +116,7 @@ const SUPABASE_URL="https://xdcscknfomlzwysczegc.supabase.co";
 const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
 const supabaseClient=supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
-const BUCKET_NAME="proofs"; // ✅ your real bucket
+const BUCKET_NAME="proofs";
 
 let currentUserEmail="";
 let depositAddresses=[];
