--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -8,10 +8,11 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-body{margin:0;font-family:system-ui;background:#020617;color:#e5e7eb;padding:16px;padding-bottom:90px}
+body{margin:0;font-family:system-ui;background:#020617;color:#e5e7eb;padding:16px;padding-bottom:92px}
 header{display:flex;justify-content:space-between;align-items:center;padding:14px 0;border-bottom:1px solid #1e293b;margin-bottom:14px}
 button{border:none;padding:10px 14px;border-radius:10px;font-weight:900;cursor:pointer;background:#38bdf8;color:#020617}
 .menuBtn{background:#0b1224;color:#e5e7eb;border:1px solid #1e293b}
+
 .box{border:1px solid #1e293b;border-radius:12px;padding:14px;background:#020617;margin-bottom:14px}
 .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:10px}
 .card{border:1px solid #1e293b;border-radius:12px;padding:10px}
@@ -20,8 +21,10 @@ h2{margin:0;font-size:18px}
 .ok{color:#22c55e}
 .err{color:#f87171}
 input,select{width:100%;padding:12px;margin-bottom:10px;border-radius:10px;border:1px solid #1e293b;background:#020617;color:#e5e7eb}
+
 a{color:#38bdf8;text-decoration:none;font-weight:1000}
 a:hover{text-decoration:underline}
+
 .pill{padding:6px 10px;border-radius:999px;font-weight:1000;font-size:12px;display:inline-block}
 .pending{background:#facc15;color:#020617}
 .active{background:#38bdf8;color:#020617}
@@ -29,8 +32,22 @@ a:hover{text-decoration:underline}
 .rejected{background:#f87171;color:#020617}
 
 /* SIDEBAR */
-.overlay{position:fixed; inset:0;background:rgba(0,0,0,.65);display:none; z-index:999;backdrop-filter: blur(4px);}
-.sidebar{position:fixed; top:0; left:-290px;width:270px; height:100vh;background:#020617;border-right:1px solid #1e293b;padding:16px;transition:.28s ease;z-index:1000;box-shadow:0 20px 80px rgba(0,0,0,.6);}
+.overlay{
+  position:fixed; inset:0;
+  background:rgba(0,0,0,.65);
+  display:none; z-index:999;
+  backdrop-filter: blur(4px);
+}
+.sidebar{
+  position:fixed; top:0; left:-290px;
+  width:270px; height:100vh;
+  background:#020617;
+  border-right:1px solid #1e293b;
+  padding:16px;
+  transition:.28s ease;
+  z-index:1000;
+  box-shadow:0 20px 80px rgba(0,0,0,.6);
+}
 .sidebar.open{ left:0; }
 .overlay.show{ display:block; }
 
@@ -38,7 +55,11 @@ a:hover{text-decoration:underline}
 .brand{font-weight:1000;font-size:18px;letter-spacing:.6px;}
 .closeBtn{background:#0b1224;border:1px solid #1e293b;color:#e5e7eb;border-radius:10px;padding:8px 12px;}
 .userTag{padding:10px;border-radius:12px;border:1px solid #1e293b;background:#0b1224;margin-bottom:12px;}
-.sideItem{display:flex;gap:10px;align-items:center;padding:12px;border:1px solid #1e293b;border-radius:12px;margin-bottom:10px;color:#e5e7eb;background:#0b1224;}
+.sideItem{
+  display:flex;gap:10px;align-items:center;
+  padding:12px;border:1px solid #1e293b;border-radius:12px;margin-bottom:10px;
+  color:#e5e7eb;background:#0b1224;
+}
 .sideItem:hover{background:#0f1a33}
 .activeLink{border:1px solid #38bdf8;background:rgba(56,189,248,0.12);}
 .sideLogout{background:#f87171;color:#020617;border:none;width:100%;padding:12px;border-radius:12px;font-weight:1000}
@@ -46,30 +67,38 @@ a:hover{text-decoration:underline}
 /* BOTTOM NAV */
 .bottomNav{
   position:fixed;left:0;right:0;bottom:0;
-  height:72px;
-  background:#020617;
+  height:74px;background:#020617;
   border-top:1px solid #1e293b;
-  display:flex;
-  justify-content:space-around;
-  align-items:center;
-  z-index:1200;
-  padding:6px 10px;
+  display:flex;justify-content:space-around;align-items:center;
+  z-index:1200;padding:6px 10px;
 }
 .navItem{
-  flex:1;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  color:#94a3b8;
-  font-size:12px;
-  font-weight:900;
-  padding:8px 0;
-  border-radius:14px;
-  cursor:pointer;
+  flex:1;display:flex;flex-direction:column;
+  align-items:center;justify-content:center;
+  color:#94a3b8;font-size:12px;font-weight:1000;
+  padding:10px 0;border-radius:14px;cursor:pointer;
+  position:relative;
 }
 .navItem span{font-size:18px;margin-bottom:4px}
 .navActive{color:#38bdf8;background:rgba(56,189,248,0.10)}
+
+/* BADGE */
+.badge{
+  position:absolute;
+  top:6px;
+  right:22%;
+  min-width:18px;
+  height:18px;
+  padding:0 6px;
+  border-radius:999px;
+  background:#f87171;
+  color:#020617;
+  font-weight:1000;
+  font-size:11px;
+  display:none;
+  align-items:center;
+  justify-content:center;
+}
 </style>
 </head>
 
@@ -126,9 +155,7 @@ a:hover{text-decoration:underline}
 
 <div class="box">
   <h2>Live Crypto Prices</h2>
-  <div class="grid" id="prices">
-    <div class="card">Loading…</div>
-  </div>
+  <div class="grid" id="prices"><div class="card">Loading…</div></div>
 </div>
 
 <div class="box" id="depositSection">
@@ -181,10 +208,23 @@ a:hover{text-decoration:underline}
 <!-- BOTTOM NAV -->
 <div class="bottomNav">
   <div class="navItem navActive" onclick="goHome()"><span>🏠</span>Home</div>
-  <div class="navItem" onclick="goDeposit()"><span>💳</span>Deposit</div>
-  <div class="navItem" onclick="goWithdraw()"><span>➡</span>Withdraw</div>
+
+  <div class="navItem" onclick="goDeposit()">
+    <div id="badgeDeposit" class="badge">0</div>
+    <span>💳</span>Deposit
+  </div>
+
+  <div class="navItem" onclick="goWithdraw()">
+    <div id="badgeWithdraw" class="badge">0</div>
+    <span>➡</span>Withdraw
+  </div>
+
   <div class="navItem" onclick="goPlans()"><span>💼</span>Plans</div>
-  <div class="navItem" onclick="goSupport()"><span>🧑‍💻</span>Support</div>
+
+  <div class="navItem" onclick="goSupport()">
+    <div id="badgeSupport" class="badge">0</div>
+    <span>🧑‍💻</span>Support
+  </div>
 </div>
 
 <script>
@@ -198,7 +238,7 @@ let depositAddresses=[];
 
 init();
 
-/* NAV FUNCTIONS */
+/* NAV */
 function goHome(){ window.scrollTo({top:0,behavior:"smooth"}); }
 function goDeposit(){ document.getElementById("depositSection").scrollIntoView({behavior:"smooth"}); }
 function goWithdraw(){ window.location.href="withdraw.html"; }
@@ -226,6 +266,18 @@ function daysBetween(date1, date2){
   return Math.max(0, Math.ceil(diff));
 }
 
+function setBadge(id, count){
+  const el=document.getElementById(id);
+  if(!el) return;
+  const n=Number(count||0);
+  if(n<=0){
+    el.style.display="none";
+  }else{
+    el.style.display="flex";
+    el.innerText = n > 99 ? "99+" : String(n);
+  }
+}
+
 async function init(){
   const { data:userData } = await supabaseClient.auth.getUser();
   if(!userData.user){
@@ -242,6 +294,34 @@ async function init(){
   await loadDepositAddresses();
   renderDepositAddress();
   fetchPrices();
+  loadBadges();
+}
+
+async function loadBadges(){
+  // Pending Deposits
+  const dep = await supabaseClient
+    .from("deposit_confirmations")
+    .select("id", { count: "exact", head: true })
+    .eq("user_email", currentUserEmail)
+    .eq("status", "pending");
+
+  // Pending Withdrawals
+  const wd = await supabaseClient
+    .from("withdrawals")
+    .select("id", { count: "exact", head: true })
+    .eq("user_email", currentUserEmail)
+    .eq("status", "pending");
+
+  // Open Tickets
+  const tk = await supabaseClient
+    .from("support_tickets")
+    .select("id", { count: "exact", head: true })
+    .eq("user_email", currentUserEmail)
+    .eq("status", "open");
+
+  setBadge("badgeDeposit", dep.count || 0);
+  setBadge("badgeWithdraw", wd.count || 0);
+  setBadge("badgeSupport", tk.count || 0);
 }
 
 async function loadBalance(){
@@ -375,6 +455,9 @@ async function submitDeposit(){
   document.getElementById("confAmount").value="";
   document.getElementById("confTx").value="";
   document.getElementById("confProof").value="";
+
+  // Refresh badges immediately
+  loadBadges();
 }
 
 async function logout(){
