--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -465,6 +465,13 @@ async function logout(){
   window.location.href="login.html";
 }
 </script>
-
+<script>
+  supabase.auth.getUser().then(({ data, error }) => {
+    if (error) console.error(error);
+    else console.log("LOGGED IN USER UID:", data.user.id);
+    alert("Your UID: " + data.user.id);
+  });
+</script>
+  
 </body>
 </html>
